<resources>
    <string name="app_name">Kursach</string>
    <string name="start">Начать</string>
    <string name="todo">TODO</string>
    <string name="name_program">Muscule Bang</string>
    <string name="ftracker">Fitness tracker</string>
    <string name="first_question">Выберите ваш пол</string>
    <string name="male">Мужской</string>
    <string name="female">Женский</string>
    <string name="next">Далее</string>
    <string name="second_question">Введите ваши данные</string>
    <string name="height">Рост</string>
    <string name="weight">Вес</string>
    <string name="age">Возраст</string>
    <string name="wanna">Какой цели вы хотите достичь?</string>
    <string name="train_complex">КОМПЛЕКСНАЯ ТРЕНИРОВКА ВСЕГО ТЕЛА</string>
    <string name="train_arms">ТРЕНИРОВКА ВЕРХНЕй ЧАСТИ ТЕЛА</string>
    <string name="train_tors">ТРЕНИРОВКА ТОРСА</string>
    <string name="train_spina">ТРЕНИРОВКА СПИНЫ</string>
    <string name="train_legs">ТРЕНИРОВКА НИЖНЕЙ ЧАСТИ ТЕЛА</string>
    <string name="muscule">Набор мышечной массы</string>
    <string name="lose_w">Потеря веса</string>
    <string name="tonus">Поддержание тела в тонусе</string>
    <string name="train_gimn">ГИМНАСТИЧЕСКАЯ ТРЕНИРОВКА</string>
    <string name="plan">план</string>
    <string name="otchet">Календарь</string>
    <string name="training">Тренировки</string>
    <string name="profile">профиль</string>
    <string name="person_train_text">Хотите мы подеберем вам лично персональную тренировку, ориентированную на ваши данные и предпочтения?</string>
    <string name="text_3_f"> Лечь на лавку, или принять упор лежа, зафиксировав руки за головой (можно захватить какую-либо опору), на выдохе за счет усилия мышц пресса вывести ноги до линии талии, и чуть подкрутить таз к нижним ребрам. На вдохе – опустить обратно. Движение не должно выполняться за счет инерции, замахивать ногами не следует.</string>
    <string name="text_2_f"> Нужно сесть рядом со скамьей, расположить лопатки на ней, и опереть стопы в пол. Затем следует оторвать ягодицы от пола, и выйти в положение «позвоночник параллелен полу». Лопатки при этом не должны «ехать» по скамье вперед. Можно придерживать отягощение руками. Новички иногда изучают это движение без штанги, и только потом начинают использовать ее. Если класть гриф на бедра не комфортно, нужно обернуть его специальной подкладкой, либо воспользоваться ковриками для фитнеса.</string>
    <string name="text_1_f"> Принимается исходное положение лицом вниз в тренажере для гиперэкстензии. Корпус опускается вниз, позвоночник перпендикулярен полу. С выдохом – полное разгибание туловища, со вдохом – опускание вниз.</string>
    <string name="text_22"> Упражнение выполняется за счет сведения лопаток, то есть старт происходит с приведения лопатки к позвоночнику, затем выполняется приведение гантелей  к поясу. Локти движутся в плоскости, параллельной позвоночнику. Отводить предплечья перпендикулярно позвоночному столбу не рекомендуется. Упражнение выполняется плавно, движение не должно быть рваным или рывковым. Бицепс сгибается ровно настолько, чтобы довести гантель до уровня пояса.</string>
    <string name="text_21"> Этот вариант прорабатывает прямую и поперечную мышцы живота. Исходное положение — планка на локтях. Затем немного сгибаем ноги в коленях, не забываем следить за тазом, живот втянут, шея и позвоночник образуют одну линию. Задерживаемся в этом положении на несколько секунд.</string>
    <string name="text_20"> Как в случае с приседаниями, ноги следует расставить на ширине плеч, носки при этом должны смотреть вперед. Это положение можно менять, чтобы перемещать нагрузку на те или иные мышцы. Широкая постановка ног заставляет активнее работать мышцы внутренней поверхности ног. Если вы хотите сделать акцент на квадрицепсы, то поставьте ноги выше на платформе. Это упражнение выполняется в 2 вариантах. В первом вы отталкиваете платформу от себя, а во втором вы отталкиваетесь от платформы, чтобы отодвинуть спинку тренажера назад. В обоих вариантах мышцы работают одинаково.</string>
    <string name="text_19"> Это одно из главных упражнений на мышцы ног, которое прорабатывает верхнюю часть задней поверхности бедра, а также ягодицы в верхней фазе упражнения. Хотя упражнение обычно выполняется двумя ногами, вы можете делать его одной ногой, если хотите проработать пропорции. Если у вас есть проблемы с поясницей, то вы должны быть осторожны при выполнении этого упражнения. Растяжка при разгибании ног, в сочетании с необходимостью поднимать вес из этого положения может стать причиной травмы поясницы.</string>
    <string name="text_18"> Это одно из самых распространенных упражнений для икроножных мышц. Распределение веса в этом тренажере отличается от распределения в тренажере для жима ногами, что помогает избежать появления боли в спине. При выполнении упражнения ноги следует расставить на ширине плеч. Носки должны смотреть вперед.</string>
    <string name="text_17"> Это одно из немногих упражнений на квадрицепсы. Упражнение является изолирующим. Валик тренажера должен располагаться в передней части ног чуть выше лодыжек. Если спинка тренажера регулируется, то установите ее так, чтобы спина полностью прилегала к ней, а ягодицы находились на сиденье. Руки можете положить на рукоятки тренажера или просто опустить вниз.</string>
    <string name="text_16"> Станьте прямо, держа штангу прямым хватом на ширине плеч. Наклонитесь вперед от тазобедренного сустава, но грудь при этом должна быть поднятой, а мышцы кора – напряжены. Притяните гриф к корпусу, сгибая руки в локтях, задержитесь в верхней точке и опустите.</string>
    <string name="text_15"> Лягте на живот на наклонную скамью головным концом вверх с гантелями в обеих руках. Прижав грудную клетку к скамье, потяните гантели вверх, начиная движение со сгибания рук в локтях. Зафиксируйтесь в верхней точке, и опустите гантели вниз, возвращаясь в исходное положение.</string>
    <string name="text_14"> Лягте на горизонтальную скамью, удерживая перед грудью гантель или блин согнутыми руками, согните ноги в коленях. Напрягите верхний пресс и оторвите туловище от скамьи, затем скрутите верхнюю часть тела, приближаясь туловищем к коленям. Медленно опуститесь.</string>
    <string name="text_13"> Повисните на турнике, взявшись за него прямым хватом и выпрямив ноги. Зажимая мышцы кора, ягодицы и удерживая стопы вместе, притяните колени к груди. Задержитесь в этом положении, затем выпрямите ноги и вернитесь в исходную позицию.</string>
    <string name="text_12"> Лягте на пол на спину, вытянув руки вдоль тела и согнув ноги в коленях. Напрягите весь пресс и за счет работы нижней его части притяните колени к груди, затем оторвите таз от пола. Вернитесь в исходное положение.</string>
    <string name="text_11"> Лягте на спину, поднесите руки к вискам и согните колени. Сократите мышцы верхнего пресса и оторвите корпус от пола, затем сделайте скручивание, потянувшись корпусом к коленям. Медленно опуститесь на пол, все время держа пресс в напряжении.</string>
    <string name="text_10"> Займите положение, поставив локти под плечами, соединив стопы, приподняв бедра и зажав пресс и ягодицы, чтобы тело образовывало прямую линию от головы до пяток. Удерживайте такое положение, не давая бедрам провисать.</string>
    <string name="text_9"> Стоя лицом к кроссоверу, возьмитесь прямым хватом за двойную канатную рукоять, прикрепленную к верхнему блоку. Поднимая грудную клетку и прижимая локти к туловищу, сделайте жим, выпрямляя руки, затем медленно вернитесь в исходную позицию.</string>
    <string name="text_8"> Лягте на горизонтальную скамью, возьмитесь за гриф хватом на ширине плеч. Упритесь стопами в пол и напрягите мышцы. Опускайте штангу до касания груди, затем силой выжмите ее вверх.</string>
    <string name="text_7"> Станьте лицом к кроссоверу, прикрепите к верхнему блоку двойную канатную рукоять и возьмитесь за нее обратным хватом. Направьте грудь вверх, прижмите локти к корпусу и согните руки до уровня плеч. Зажмите бицепсы в верхней точке и опустите руки.</string>
    <string name="text_6"> Станьте прямо, взяв в каждую руку по гантели с развернутыми вперед ладонями. Прижав локти к корпусу, поднимите гантели до уровня плеч. Зажмите бицепсы в верхней точке, затем опустите гантели в исходное положение.</string>
    <string name="text_5"> Станьте прямо, расположив гриф на задней части дельтовидных мышц. Поднимите грудь, напрягите все тело и согните колени, приседая как можно ниже, при этом колени не должны заваливаться внутрь. Оттолкнитесь от пяток, чтобы подняться вверх.</string>
    <string name="text_4"> Займите положение на параллельных брусьях, выпрямив руки и скрестив стопы сзади. Удерживая грудную клетку приподнятой и напрягая пресс, согните локти до угла 90 градусов, опускаясь вниз. Толчком поднимитесь вверх, возвращаясь в исходное положение.</string>
    <string name="text_3"> Сядьте на тренажер, взявшись за рукоять прямым хватом на ширине плеч. Удерживая грудь приподнятой и напрягая мышцы пресса, потяните рукоять вниз, сгибая локти. Задержитесь в нижней точке на секунду и вернитесь в исходное положение.</string>
    <string name="text_2"> Повисните на турнике обратным хватом, руки на ширине плеч. Зажмите мышцы пресса и ягодиц и, направив грудную клетку вверх, подтяните туловище вверх, пока подбородок не достанет до перекладины. Задержитесь в этом положении, затем медленно вернитесь в исходное положение.</string>
    <string name="text_1"> Станьте в упор лежа: поставьте руки на пол, плечи и локти находятся на одной линии, стопы вместе. Зажмите мышцы кора и приблизьте грудь к полу за счет сгибания рук в локтях. Рывком оттолкнитесь руками от пола, возвращаясь в исходное положение.</string>
    <string name="text_9_n"> Не берите большой вес и не разводите ноги до предела. Только навредите. Делайте естественные движения, плавно повышайте нагрузку и не гонитесь результатом </string>
    <string name="text_8_n"> Единственным моментом, который необходимо учитывать, выполняя такую тягу, является то, что выполнять данное упражнение не следует на наклонном либо горизонтальном лежаке. Они в значительной степени сокращают амплитуду движения, а также усложняют сокращение мышечных групп спины, поскольку это не дает возможности выгибаться. Делать это упражнение следует лишь стоя.</string>
    <string name="text_7_n"> Лягте на горизонтальную скамью, удерживая перед грудью гантель или блин согнутыми руками, согните ноги в коленях. Напрягите верхний пресс и оторвите туловище от скамьи, затем скрутите верхнюю часть тела, приближаясь туловищем к коленям. Медленно опуститесь.</string>
    <string name="text_6_n"> Лягте на скамью, возьмите в каждую руку по гантели и держите их на уровне груди. Упритесь стопами в пол и напрягите мышцы. Выжмите гантели вертикально вверх, выпрямляя руки, затем контролировано опустите их вниз.u</string>
    <string name="text_5_n"> Сядьте на вертикальную скамью для жима, возьмите в каждую руку по гантели небольшого веса и немного согните локти. Направьте грудную клетку вверх, зажмите кор и поднимите гантели через стороны до уровня плеч, начиная движение от локтей, затем медленно вернитесь в исходную позицию.</string>
    <string name="text_4_n"> Сядьте на скамью и зажмите между стоп медбол. Выпрямите и поднимите ноги перед собой. Отведите туловище назад так, чтобы тело выпрямилось в линию. Держитесь за скамью, чтобы поддерживать положение тела. Поднимите туловище вверх и подведите колени к груди.</string>
    <string name="text_3_n"> Выпады с гантелями в руках представляют собой поочередные шаги с приседанием на переднюю ногу в полную амплитуду. Чем шире мы делаем шаг, тем большую нагрузку получают ягодицы и бицепс бедра, чем уже – тем больше работает квадрицепс. Таким образом, Вы можете варьировать нагрузку между этими мышечными группами в зависимости от того, какие мышцы Вы хотите проработать на сегодняшней тренировке.</string>
    <string name="about_me">Обо мне</string>
    <string name="music">Музыка</string>
</resources>