<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background = "@drawable/backrground"
    tools:context=".BodyInformation">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.287">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="389dp"
            android:layout_height="202dp"
            android:layout_gravity="center"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/muscule_bang" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:text="@string/second_question"
            android:textAllCaps="true"
            android:textColor="#b8860b"
            android:textSize="23sp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.248"
        tools:layout_editor_absoluteX="0dp">

        <EditText
            android:id="@+id/height_edit_text"
            android:layout_width="98dp"
            android:layout_height="50dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/editstyle"
            android:gravity="center"
            android:hint="@string/height"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="3"
            android:singleLine="true" />

        <EditText
            android:id="@+id/weight_edit_text"
            android:layout_width="98dp"
            android:layout_height="50dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/editstyle"
            android:gravity="center"
            android:hint="@string/weight"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="3"
            android:singleLine="true" />

        <EditText
            android:id="@+id/age_edit_text"
            android:layout_width="98dp"
            android:layout_height="50dp"
            android:background="@drawable/editstyle"
            android:gravity="center"
            android:hint="@string/age"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="2"
            android:singleLine="true" />
    </LinearLayout>

    <Button
        android:id="@+id/button_next"
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:background="@drawable/buttom_start"
        android:onClick="next_click"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />



</androidx.constraintlayout.widget.ConstraintLayout>