<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background = "@drawable/backrground"
    tools:context=".Ambitions">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="389dp"
        android:layout_height="200dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.178"
        app:srcCompat="@drawable/muscule_bang" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="286dp"
        android:layout_height="65dp"
        android:gravity="center"
        android:text="@string/wanna"
        android:textAllCaps="true"
        android:textColor="#b8860b"
        android:textSize="23sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6"
        app:layout_constraintVertical_bias="0.592" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="264dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6"
        app:layout_constraintVertical_bias="0.907">

        <Button
            android:id="@+id/muscule"
            android:layout_width="323dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/buttom_start"
            android:onClick="muscule_click"
            android:text="@string/muscule"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button_weight_lose"
            android:layout_width="323dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/buttom_start"
            android:onClick="lose_weight_click"
            android:text="@string/lose_w"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button_tonus"
            android:layout_width="323dp"
            android:layout_height="wrap_content"
            android:background="@drawable/buttom_start"
            android:onClick="tonus_click"
            android:text="@string/tonus"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>