<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_menu"
    tools:context=".MainMenuFemale">

    <ScrollView
        android:id="@+id/scrollView4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="350dp"
                android:layout_height="56dp"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/muscule_bang_stroka" />

            <Button
                android:id="@+id/imageButton"
                android:layout_width="match_parent"
                android:layout_height="190dp"
                android:layout_marginLeft="13dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="13dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/complex_woman"
                android:gravity="center_vertical"
                android:onClick="complex_click_female"
                android:paddingLeft="10dp"
                android:textSize="16dp"
                android:text="@string/train_complex"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/imageButton2"
                android:layout_width="match_parent"
                android:layout_height="190dp"
                android:paddingLeft="10dp"
                android:textSize="16dp"
                android:layout_marginLeft="13dp"
                android:layout_marginRight="13dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/top_fem_sec"
                android:gravity="center_vertical"
                android:onClick="top_click_female"
                android:text="@string/train_arms"
                android:textColor="@color/white"
                tools:layout_editor_absoluteX="73dp"
                tools:layout_editor_absoluteY="607dp" />

            <Button
                android:id="@+id/imageButton3"
                android:layout_width="match_parent"
                android:layout_height="190dp"
                android:layout_marginLeft="13dp"
                android:layout_marginRight="13dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/tors_female"
                android:gravity="center_vertical"
                android:onClick="tors_click_female"
                android:paddingLeft="10dp"
                android:textSize="16dp"
                android:scaleType="fitXY"
                android:text="@string/train_tors"
                android:textColor="@color/white"
                tools:layout_editor_absoluteX="73dp"
                tools:layout_editor_absoluteY="476dp" />

            <Button
                android:id="@+id/imageButton4"
                android:layout_width="match_parent"
                android:layout_height="190dp"
                android:layout_marginLeft="13dp"
                android:layout_marginRight="13dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/spina_woman_sec"
                android:gravity="center_vertical"
                android:onClick="spina_click_female"
                android:paddingLeft="10dp"
                android:textSize="16dp"
                android:scaleType="fitXY"
                android:text="@string/train_spina"
                android:textColor="@color/white"
                tools:layout_editor_absoluteX="73dp"
                tools:layout_editor_absoluteY="340dp" />

            <Button
                android:id="@+id/imageButton5"
                android:layout_width="match_parent"
                android:layout_height="190dp"
                android:layout_marginLeft="13dp"
                android:layout_marginRight="13dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/legs_woman"
                android:gravity="center_vertical"
                android:onClick="legs_click_female"
                android:paddingLeft="10dp"
                android:textSize="16dp"
                android:scaleType="fitXY"
                android:text="@string/train_legs"
                android:textColor="@color/white"
                tools:layout_editor_absoluteX="73dp"
                tools:layout_editor_absoluteY="198dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="86dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:background="#2a2a2e">
            </LinearLayout>
        </LinearLayout>


    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="86dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/scrollView4"
        android:background="#2a2a2e"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="88dp"
            android:layout_height="45dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/button_level"
            android:gravity="center"
            android:onClick="plan_click"
            android:text="@string/plan"
            android:textColor="#b8860b"
            android:textSize="13sp" />

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="88dp"
            android:layout_height="45dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/button_level"
            android:gravity="center"
            android:onClick="otchet_click"
            android:text="@string/otchet"
            android:textColor="#b8860b"
            android:textSize="13sp" />

        <Button
            android:id="@+id/button_training"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="88dp"
            android:layout_height="45dp"
            android:layout_marginEnd="10sp"
            android:layout_marginRight="10dp"
            android:background="@drawable/button_level"
            android:gravity="center"
            android:onClick="trains_click"
            android:text="@string/training"
            android:textColor="#b8860b"
            android:textSize="13sp" />

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="88dp"
            android:layout_height="45dp"
            android:background="@drawable/button_level"
            android:gravity="center"
            android:onClick="profile_click"
            android:text="@string/profile"
            android:textColor="#b8860b"
            android:textSize="13sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>